--- a/.github/workflows/deploy-to-ec2-mount_4.yml
+++ b/.github/workflows/deploy-to-ec2-mount_4.yml
@@ -25,8 +25,8 @@ on:
 jobs:
   deploy:
     # Self-Hosted ランナーを指定（タグは環境に合わせて調整してください）
-    runs-on: [ec2, self-hosted]
-
+    runs-on: self-hosted
+    
     # テンプレートリポジトリ（名前に 'template' を含む）では実行しない
     if: ${{ !contains(github.event.repository.name , 'template') }}
 
@@ -92,4 +92,5 @@ jobs:
         if: success() && env.MOUNT_TARGET_DIR == ''
         run: |
           echo "::warning::Skipped deployment because required secret is missing (MOUNT_TARGET_DIR)."
+
 
