--- a/.github/workflows/manual-grant-single-team-permission.yml
+++ b/.github/workflows/manual-grant-single-team-permission.yml
@@ -50,8 +50,8 @@ jobs:
         id: app-token
         uses: actions/create-github-app-token@v1
         with:
-          app-id: ${{ secrets.MY_APP_ID }}
-          private-key: ${{ secrets.MY_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.JW_APP_ID }}
+          private-key: ${{ secrets.JW_APP_PRIVATE_KEY }}
 
       # 生成したトークンを環境変数 GH_TOKEN に設定
       - name: Set GH_TOKEN
